[build-system]
requires = ["setuptools>=67.7.2", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "argcomplete"
description = "Bash tab completion for argparse"
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "Apache Software License" }
authors = [{ name = "Andrey Kislyuk"}, {email = "kislyuk@gmail.com" }]
maintainers = []
dynamic = ["version"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Development Status :: 5 - Production/Stable",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Shells",
  "Topic :: Terminals",
]

[project.scripts]
activate-global-python-argcomplete = "argcomplete.scripts.activate_global_python_argcomplete:main"
python-argcomplete-check-easy-install-script = "argcomplete.scripts.python_argcomplete_check_easy_install_script:main"
register-python-argcomplete = "argcomplete.scripts.register_python_argcomplete:main"

[project.optional-dependencies]
test = ["coverage", "pexpect", "wheel", "ruff", "mypy"]

[project.urls]
"Documentation"= "https://kislyuk.github.io/argcomplete"
"Source Code"= "https://github.com/kislyuk/argcomplete"
"Issue Tracker"= "https://github.com/kislyuk/argcomplete/issues"
"Change Log"= "https://github.com/kislyuk/argcomplete/blob/develop/Changes.rst"

[tool.setuptools_scm]

[tool.black]
line-length = 120
exclude = ".*/version.py"
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120
skip = ".*/version.py"

[tool.ruff]
line-length = 120
per-file-ignores = {"argcomplete/__init__.py" = ["F401"]}

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
files = [
  "argcomplete"
]
check_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "importlib.*"
ignore_missing_imports = true
